--- a/MainCodeChallenge/Views/Account/AdminPage.cshtml
+++ b/MainCodeChallenge/Views/Account/AdminPage.cshtml
@@ -19,6 +19,7 @@ columns: new[]
 {
         grid.Column(columnName:"Qid",header:"Question ID"),
         grid.Column(columnName:"QName", header:"Question Name"),
+        grid.Column(columnName:"CT_Name", header:"category"),
         grid.Column(columnName:"QDescription", header:"Question Description",format: @<text>@item.QDescription.Substring(0, 180) .... </text>),
         grid.Column(columnName:"POwnerName",header:"Question Owner"),
         grid.Column(columnName:"QLevel",header:"Question Level"),
