--- a/MainCodeChallenge/Views/Account/ProfilePage.cshtml
+++ b/MainCodeChallenge/Views/Account/ProfilePage.cshtml
@@ -11,6 +11,12 @@
         border-collapse: collapse;
         padding: 2px;
     }
+    .center {
+        margin: auto;
+        width: 60%;
+        border: 3px solid #73AD21;
+        padding: 10px;
+    }
 </style>
 
 <h2>ProfilePage</h2>
@@ -22,6 +28,7 @@ columns: new[]
 {
         grid.Column(columnName:"Qid",header:"Question ID"),
         grid.Column(columnName:"QName", header:"Question Name"),
+        grid.Column(columnName:"CT_Name", header:"category"),
         grid.Column(columnName:"QDescription", header:"Question Description",format: @<text>@item.QDescription.Substring(0, 180) .... </text>),
         grid.Column(columnName:"POwnerName",header:"Question Owner"),
         grid.Column(columnName:"QLevel",header:"Question Level"),
