--- a/MainCodeChallenge/Views/Challenge/DetailsChallenge.cshtml
+++ b/MainCodeChallenge/Views/Challenge/DetailsChallenge.cshtml
@@ -64,7 +64,7 @@
                 <h2>@Model.QName </h2>
             </td>
             <td style="direction:rtl">
-                <div class="gradientButton"> Pick up / @Model.LPointsRequired</div>
+                <div class="gradientButton"> Pick up / @Model.QRpoint</div>
             </td>
         </tr>
     </table>
