--- a/MainCodeChallenge/Views/Account/AdminPage.cshtml
+++ b/MainCodeChallenge/Views/Account/AdminPage.cshtml
@@ -23,8 +23,10 @@ columns: new[]
         grid.Column(columnName:"QDescription", header:"Question Description",format: @<text>@item.QDescription.Substring(0, 180) .... </text>),
         grid.Column(columnName:"POwnerName",header:"Question Owner"),
         grid.Column(columnName:"QLevel",header:"Question Level"),
-        grid.Column(columnName:"LPointsRequired",header:"QPoints Required"),
+        grid.Column(columnName:"QRpoint",header:"QPoints Required"),
         grid.Column(columnName:"CountOfA",header:"Number of volunteers")
+
+    
 
 }
 )
