--- a/MainCodeChallenge/Views/Shared/_Layout.cshtml
+++ b/MainCodeChallenge/Views/Shared/_Layout.cshtml
@@ -4,9 +4,24 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <style>
+        .float-container {
+            border: 3px solid #fff;
+            padding: 20px;
+        }
+
+        .float-child {
+            width: 50%;
+            float: left;
+            padding: 20px;
+            color: aliceblue
+        }
+    </style>
 </head>
+
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -24,8 +39,17 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
+
+                <div dir="rtl">
+                    @*<button type="submit">
+                        <img src="~/img/Bexit.png" />
+                    </button>
+                    <img src="~/img/Bexit.png" />*@
+                </div>
             </div>
+           
         </div>
+       
     </div>
     <div class="container body-content">
         @RenderBody()
