--- a/MainCodeChallenge/Views/Challenge/DetailsChallenge.cshtml
+++ b/MainCodeChallenge/Views/Challenge/DetailsChallenge.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model MainCodeChallenge.Models.ChallengeApprovalStatus*@
+﻿@model MainCodeChallenge.Models.ApprovalStatus
 
 @{
 
@@ -7,65 +7,15 @@
     IEnumerable<MainCodeChallenge.Models.Example> example = ViewData["ExampleChallenge"] as IEnumerable<MainCodeChallenge.Models.Example>;
     WebGrid gridch = new WebGrid(challengeApprovalStatus, canSort: true, canPage: true);
     WebGrid gridD = new WebGrid(example, canSort: true, canPage: true);
-    int Uid= (int)ViewData["Uid"];
+    int Uid = (int)ViewData["Uid"];
     bool ApprovalStatus = (bool)ViewData["ApprovalStatus"];
-    bool IsItPossibleToPickUp=(bool)ViewData["IsItPossibleToPickUp"];
+    bool IsItPossibleToPickUp = (bool)ViewData["IsItPossibleToPickUp"];
 
 }
 
 <h1>DetailsChallenge</h1>
 
-
-<style>
-    table, th, td {
-        padding: 2px;
-    }
-    .center {
-        margin: auto;
-        width: 90%;
-        /*border: 3px solid #4682B4;*/
-        padding: 10px;
-    }
-    .float-container {
-        border: 3px solid #fff;
-        padding: 20px;
-    }
-
-    .float-child {
-        width: 50%;
-        float: left;
-        padding: 20px;
-        border: 2px solid red;
-    }
-    .gradientButton {
-        color: white;
-        text-transform: uppercase;
-        width: 100px;
-        line-height: 50px;
-       
-        background: #00B000;
-        text-align: center;
-        box-shadow: inset 0 0 25px rgba(0,0,0,.25)
-    }
-   .gradientButton:hover {
-        /*text-shadow: 1px 1px #336633;*/
-        background: linear-gradient(to bottom right, LawnGreen 5%, green 80%);
-   }
-    .gradientButtonDisable {
-        color: white;
-        text-transform: uppercase;
-        width: 100px;
-        line-height: 50px;
-        background: #DCDCDC;
-        text-align: center;
-        box-shadow: inset 0 0 25px rgb(128, 128, 128)
-    }
-   .blueBackground {
-        background-color:#F0F8FF 
-   }
-</style>
-
-
+<link rel="Stylesheet" href="@Href("~/Content/ChD.css")" />
 
 
 <div class="center">
@@ -83,7 +33,7 @@
                     }
                     else
                     {
-            <button class="gradientButtonDisable" disabled="disabled">Pick up / @challengeApprovalStatus.First().QRpoint</button>
+                        <button class="gradientButtonDisable" disabled="disabled">Pick up / @challengeApprovalStatus.First().QRpoint</button>
                     }
 
                 }
@@ -106,44 +56,44 @@
 
         @foreach (var item in example)
         {
-        <tr>
-            <td>
-                Input:
-            </td>
-        </tr>
-        <tr>
-            <td class="blueBackground">
-                &nbsp;&nbsp;&nbsp; @item.EXInputModel
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Output:
-            </td>
-        </tr>
-        <tr>
-            <td class="blueBackground">
-                &nbsp;&nbsp;&nbsp; @item.EXOutputModel
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <br />
-            </td>
-        </tr>
+            <tr>
+                <td>
+                    Input:
+                </td>
+            </tr>
+            <tr>
+                <td class="blueBackground">
+                    &nbsp;&nbsp;&nbsp; @item.EXInputModel
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Output:
+                </td>
+            </tr>
+            <tr>
+                <td class="blueBackground">
+                    &nbsp;&nbsp;&nbsp; @item.EXOutputModel
+                </td>
+            </tr>
+            <tr>
+                <td>
+                </td>
+            </tr>
         }
     </table>
 
     <br />
+    @if (ApprovalStatus)
+    {
+        @Html.TextAreaFor(model => model.SAnswer, new { style = "width: 100%" })
 
+        <button class="gradientButton" onclick="location.href='@Url.Action("PickUpChallenge", "Challenge", new {Qid= @challengeApprovalStatus.First().Qid ,Uid= Uid} )';return false;"> 
+            Submit
+        </button>
 
-        <div>
-            
-        </div>
+    }
 
 
 </div>
-
-
-
 
