--- a/MainCodeChallenge/Content/ChD.css
+++ b/MainCodeChallenge/Content/ChD.css
@@ -55,3 +55,16 @@ table, th, td {
     width: 100%;
 }
 
+.webgrid {
+    border: solid 1px #bbbbbb;
+    border-collapse: collapse;
+    padding: 2px;
+    width:100%;
+}
+/*.center {
+    margin: auto;
+    width: 60%;
+    border: 3px solid #73AD21;
+    padding: 10px;
+}
+*/
