--- a/MainCodeChallenge/Views/Challenge/DetailsChallenge.cshtml
+++ b/MainCodeChallenge/Views/Challenge/DetailsChallenge.cshtml
@@ -107,8 +107,10 @@
         @Html.DropDownList("MySkills", new SelectList(ViewBag.Languages, "Lid", "Lname"), new { Id = "DropLan" })
         <br />
         //string ans = model.SAnswer;
-        @Html.TextAreaFor(model => model.SAnswer, new { Id = "TxtAns", style = "width: 100%", });
-        <button id="submitB" Onclick="Submit()">submit</button>
+        @Html.TextAreaFor(model => model.SAnswer, new { Id = "TxtAns", style = "max-width: 100%", });
+        <br />
+
+        <button id="submitB" Onclick="Submit()" class="btn-login">submit</button>
 
 
     }
