--- a/MainCodeChallenge/Content/ChD.css
+++ b/MainCodeChallenge/Content/ChD.css
@@ -64,7 +64,9 @@ table, th, td {
 
 
  textarea {
-    max - width: 100 %;
+    max-width: 100%;
+    height:200px;
+    
 }
 /*.center {
     margin: auto;
