--- a/MainCodeChallenge/Views/Account/ProfilePage.cshtml
+++ b/MainCodeChallenge/Views/Account/ProfilePage.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MainCodeChallenge.Models.ChallengeApprovalStatus>
+﻿@model IEnumerable<MainCodeChallenge.Models.ChallengeApprovalStatusP>
 
 @{
     ViewBag.Title = "ProfilePage";
@@ -34,11 +34,19 @@ columns: new[]
         grid.Column(columnName:"QLevel",header:"Question Level"),
         grid.Column(columnName:"QRpoint",header:"QPoints Required"),
         grid.Column(columnName:"CountOfA",header:"Number of volunteers"),
+        grid.Column(columnName:"Solved",header:"Approval Status"),
         grid.Column(header: "Action",
             format: (item) => new HtmlString("<a href=" + @Url.Action("DetailsChallenge","Challenge",new { id = item.Qid }  ) +
             " title='DetailsChallenge' ><i class='glyphicon glyphicon-search'> </i><span class='sr-only'>Detail</span> </a> "
                 )
               )
+         //.Template(p => p.IsPublished).ClientTemplate(
+         // "# if(IsPublished.GetValueOrDefault(false)) { #" +
+         // "<img src='"+ Url.Content("~/Images/icon_true.gif") +"' alt='#= IsPublished #' />"+
+         // "# } else { #" +
+         // "<img src='"+ Url.Content("~/Images/false-icon.png") +"' alt='#= IsPublished #' />"+
+         // "# } #"
+         // );
 }
 )
 
