--- a/MainCodeChallenge/Content/ChD.css
+++ b/MainCodeChallenge/Content/ChD.css
@@ -68,10 +68,17 @@ table, th, td {
     height:200px;
     
 }
-/*.center {
-    margin: auto;
-    width: 60%;
-    border: 3px solid #73AD21;
-    padding: 10px;
+.btn {
+    width: 100%;
+    margin: 5px 0;
+    height: 45px;
+    vertical-align: middle;
+    font-size: 20px;
+    background-color: #1877f2;
+    border: none;
+    border-radius: 6px;
+    font-size: 20px;
+    padding: 0 16px;
+    color: #ffffff;
+    font-weight: 700;
 }
-*/
