--- a/MainCodeChallenge/Views/Account/AdminPage.cshtml
+++ b/MainCodeChallenge/Views/Account/AdminPage.cshtml
@@ -4,33 +4,45 @@
     ViewBag.Title = "AdminPage";
     WebGrid grid = new WebGrid(Model, canSort: true, canPage: true, rowsPerPage: 5);
 }
-<style>
-    table, th, td {
-        border: solid 1px #bbbbbb;
-        border-collapse: collapse;
-        padding: 2px;
-    }
-</style>
+<link rel="stylesheet" href="~/Content/Adminpage.css">
 <h2>AdminPage</h2>
 <br />
-@grid.GetHtml(
-columns: new[]
-
-{
-        grid.Column(columnName:"Qid",header:"Question ID"),
-        grid.Column(columnName:"QName", header:"Question Name"),
-        grid.Column(columnName:"CT_Name", header:"category"),
-        grid.Column(columnName:"QDescription", header:"Question Description",format: @<text>@item.QDescription.Substring(0, 180) .... </text>),
-        grid.Column(columnName:"POwnerName",header:"Question Owner"),
-        grid.Column(columnName:"QLevel",header:"Question Level"),
-        grid.Column(columnName:"QRpoint",header:"QPoints Required"),
-        grid.Column(columnName:"CountOfA",header:"Number of volunteers")
 
 
 
+<div dir="rtl" >
+    <button class="gradientButton" onclick="location.href='@Url.Action("CreateNewChallenge", "Challenge" )';return false;">Create New Challenge</button>
+
+</div>
+<br />
+
+<div>
     
+
+    @grid.GetHtml(
+    columns: new[]
+
+    {
+            grid.Column(columnName:"Qid",header:"Question ID"),
+            grid.Column(columnName:"QName", header:"Question Name"),
+            grid.Column(columnName:"CT_Name", header:"category"),
+            grid.Column(columnName:"QDescription", header:"Question Description",format: @<text>@item.QDescription.Substring(0, 180) .... </text>),
+grid.Column(columnName:"POwnerName",header:"Question Owner"),
+grid.Column(columnName:"QLevel",header:"Question Level"),
+grid.Column(columnName:"QRpoint",header:"QPoints Required"),
+grid.Column(columnName:"CountOfA",header:"Number of volunteers"),
+grid.Column(header: "Action",
+format: (item) => new HtmlString("<a href=" + @Url.Action("DetailsChallengeAdmin","Challenge",new { id = item.Qid }  ) +
+" title='DetailsChallenge' ><i class='glyphicon glyphicon-search'> </i><span class='sr-only'>Detail</span> </a> "
+)
+)
+
+
 
 }
 )
+
+
+</div>
 
 
