--- a/MainCodeChallenge/Views/Challenge/detailsAnswer.cshtml
+++ b/MainCodeChallenge/Views/Challenge/detailsAnswer.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MainCodeChallenge.Models.ApprovalStatus
-
+<link href="~/Content/ChDetail.css" rel="stylesheet" />
 <div>
     <h4>ApprovalStatus</h4>
-    <hr />
-    <dl class="dl-horizontal">
 
+    <hr />
+    <dl>
 
         <dt>
-            @Html.DisplayNameFor(model => model.QStatus)
+            status:
         </dt>
 
         <dd>
@@ -15,55 +15,42 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SQDate)
+            Approval Status:
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.SQDate)
+            @Html.DisplayFor(model => model.approvalStatus)
         </dd>
 
+        @if ( Model.ApprovalDate != null)
+        {
         <dt>
-            @Html.DisplayNameFor(model => model.ApStatus)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ApStatus)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ApprovalDate)
+            @Html.DisplayNameFor(model => model.ApprovalDate):
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.ApprovalDate)
         </dd>
+        }
 
         <dt>
-            @Html.DisplayNameFor(model => model.ApprovalPID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ApprovalPID)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SAnswer)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SAnswer)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Lname)
+            Programming language:
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Lname)
         </dd>
 
+        <dt>
+            YourSolution:
+        </dt>
+
+        <dd>
+            <pre>@Model.SAnswer</pre>
+            
+        </dd>
+
+
+
     </dl>
 </div>
-<p>
-@*    @Html.ActionLink("Back to List", "DetailsChallenge", "Challenge", new {id=Model.SQId})*@
-</p>
